force-app/main/default/objects/Contact/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>Código alfanumérico único que identifica al contacto de forma unívoca. El formato viene de SAP</description>
    <externalId>true</externalId>
    <label>Código Externo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>