force-app/main/default/objects/Contact/fields/isChristmas__c.field-meta.xml
<CustomField>
    <fullName>isChristmas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que identifica &quot;alertas&quot; para navidad.</description>
    <label>Navidad</label>
    <type>Checkbox</type>
</CustomField>