force-app/main/default/objects/Contact/fields/isNewsletter__c.field-meta.xml
<CustomField>
    <fullName>isNewsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Aceptación por parte del contacto para recibir información por correo.</description>
    <label>Suscripción Newsletter</label>
    <type>Checkbox</type>
</CustomField>