force-app/main/default/objects/Contact/fields/IsPublic__c.field-meta.xml
<CustomField>
    <fullName>IsPublic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag que te indica si el contacto pertenece a una institución pública</description>
    <label>Público</label>
    <type>Checkbox</type>
</CustomField>