force-app/main/default/objects/Contact/fields/MainContact__c.field-meta.xml
<CustomField>
    <fullName>MainContact__c</fullName>
    <description>Contacto principal al que pertenece dicho contacto</description>
    <label>Contacto de</label>
    <length>90</length>
    <type>Text</type>
</CustomField>