force-app/main/default/objects/Contact/fields/Org__c.field-meta.xml
<CustomField>
    <fullName>Org__c</fullName>
    <description>Organismo al que pertenece el cliente.</description>
    <label>Organismo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>