force-app/main/default/objects/Contact/fields/OthersContact__c.field-meta.xml
<CustomField>
    <fullName>OthersContact__c</fullName>
    <description>Campo de área de texto para adjuntar información adicional sobre el contacto</description>
    <label>Observaciones</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>