force-app/main/default/objects/Contact/fields/Relevance__c.field-meta.xml
<CustomField>
    <fullName>Relevance__c</fullName>
    <description>Campo para indicar la relevancia el contacto</description>
    <label>Relevancia</label>
    <length>90</length>
    <type>Text</type>
</CustomField>