force-app/main/default/objects/Contact/fields/Rol__c.field-meta.xml
<CustomField>
    <fullName>Rol__c</fullName>
    <description>Campo que almacena el cargo que ostenta esta persona, no es viable tenerlo por picklist debido a la multitud de valores.</description>
    <label>Cargo</label>
    <length>90</length>
    <type>Text</type>
</CustomField>