force-app/main/default/objects/Contact/fields/StateOrg__c.field-meta.xml
<CustomField>
    <fullName>StateOrg__c</fullName>
    <description>Provincia la que pertenece dicho organismo</description>
    <label>Provincia Organismo</label>
    <length>90</length>
    <type>Text</type>
</CustomField>